# delete-rs

./: Cargo.toml
src/: main.rs
